scrollbar-fixed

--- a/app/components/Scrollbar/Scrollbar.module.scss
+++ b/app/components/Scrollbar/Scrollbar.module.scss
@@ -1,8 +1,9 @@
-.scroll-bar {
+.scrollBar {
     display: flex;
+    gap: 0.5rem;
     align-items: center;
     justify-content: center;
-    font-weight: bold;
+    font-weight: 410;
     font-size: 1.2rem;
     color: #E4E4F0;
   }
